[CSSRegions] Fix Element::getBoundingClientRect and Element::getClientRects for content flow https://bugs.webkit.org/show_bug.cgi?id=66641

Original author of the patch is Mihnea Ovidenie <mihnea@adobe.com>.

Source/WebCore:

Redirected the mapLocalToContainer method to the appropriate RenderRegion.

Note: RenderObject::absoluteQuads method needs some refactor to support multiple regions,
will do that in a separate bug.

Patch by Alexandru Chiculita <achicu@adobe.com> on 2011-08-24
Reviewed by David Hyatt.

Tests: fast/regions/flowed-content-bounding-client-rect-horizontal-bt.html
       fast/regions/flowed-content-bounding-client-rect-vertical-rl.html
       fast/regions/flowed-content-bounding-client-rect-vertical.html
       fast/regions/flowed-content-bounding-client-rect.html
       fast/regions/flowed-content-transform-bounding-client-rect.html

* rendering/RenderBox.cpp:
(WebCore::RenderBox::mapLocalToContainer):
* rendering/RenderFlowThread.cpp:
(WebCore::RenderFlowThread::renderRegionForLine):
(WebCore::RenderFlowThread::mapFromFlowToRegion):
* rendering/RenderFlowThread.h:

LayoutTests:

Patch by Alexandru Chiculita <achicu@adobe.com> on 2011-08-24
Reviewed by David Hyatt.

* fast/regions/flowed-content-bounding-client-rect-expected.txt: Added.
* fast/regions/flowed-content-bounding-client-rect-horizontal-bt-expected.txt: Added.
* fast/regions/flowed-content-bounding-client-rect-horizontal-bt.html: Added.
* fast/regions/flowed-content-bounding-client-rect-vertical-expected.txt: Added.
* fast/regions/flowed-content-bounding-client-rect-vertical-rl-expected.txt: Added.
* fast/regions/flowed-content-bounding-client-rect-vertical-rl.html: Added.
* fast/regions/flowed-content-bounding-client-rect-vertical.html: Added.
* fast/regions/flowed-content-bounding-client-rect.html: Added.
* fast/regions/flowed-content-transform-bounding-client-rect-expected.txt: Added.
* fast/regions/flowed-content-transform-bounding-client-rect.html: Added.
* fast/regions/resources/helper.js: Added.
(rectToArray):
(areEqualNumbers):
(areEqualRects):
(assertEqualRects):
(testBoundingRects):

Canonical link: https://commits.webkit.org/82683@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93728 268f45cc-cd09-0410-ab3c-d52691b4dbfc